<resources>
    <string name="app_name">Kabar</string>
    <string name="intro1_head_txt">Technology news</string>
    <string name="intro2_head_txt">Native land info</string>
    <string name="intro3_head_txt">Fresh reports</string>
    <string name="intro1_desc">Follow the latest technology news from around the world</string>
    <string name="intro2_desc">Observe happening news in different countries</string>
    <string name="intro3_desc">Seeing hot news all of the universe</string>
    <string name="next">Next</string>
    <string name="choose_topic">Choose your Topics</string>
    <string name="mock_text">Ukraine\'s President Zelensky to BBC: Blood money being paid for Russian oil</string>
    <string name="see_all">See all</string>
    <string name="trending">Trending</string>
    <string name="fake_text">Wind power produced more electricity than coal and nucle...</string>
    <string name="fake_desc">Taking a daily multivitamin might be associated with improved brain function in older adults, a new study says, and the benefit appears to be greater for those with a history of cardiovascular disease.</string>
    <string name="news_content">Ukrainian President Volodymyr Zelensky has accused European countries that continue to buy Russian oil of "earning their money in other people's blood".In an interview with the BBC, President Zelensky singled out Germany and Hungary, accusing them of blocking efforts to embargo energy sales, from which Russia stands to make up to £250bn ($326bn) this year.</string>
    <string name="fake_content">Previously, the actress has been open about her mental health journey, and how fame at an early age impacted her wellbeing. She first started acting in 2011 when she was cast in Game of Thrones from … </string>
    <string name="bookmark">Bookmark</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="explore">Explore</string>
    <string name="topic">Topic</string>
    <string name="health">Health</string>
    <string name="technology">Technology</string>
    <string name="art">Art</string>
    <string name="politics">Politics</string>
    <string name="sport">Sport</string>
    <string name="travel">Travel</string>
    <string name="money">Money</string>
    <string name="health_def">Get energizing workout moves, healthy recipes...</string>
    <string name="tech_def">The latest tech news about the world\'s best hardware...</string>
    <string name="art_def">The Art Newspaper is the journal of record for...</string>
    <string name="politics_def">Opinion and analysis of American and global politi...</string>
    <string name="money_def">The latest breaking financial news on the US and world...</string>
    <string name="sport_def">Sports news and live sports coverage including scores..</string>
    <string name="travel_def">The latest travel news on the most significant developm...</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="popular_topic">Popular topic</string>
    <string name="topics">Topics</string>
    <string name="business_topic">business</string>
    <string name="general_topic">general</string>
    <string name="health_topic">health</string>
    <string name="science_topic">science</string>
    <string name="sports_topic">sports</string>
    <string name="technology_topic">technology</string>
    <string name="entertainment_topic">entertainment</string>


</resources>

