<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/exp_top_img_id"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="@dimen/text_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/health" />

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/health"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintLeft_toRightOf="@id/exp_top_img_id"
        app:layout_constraintTop_toTopOf="@id/exp_top_img_id"

        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/health_def"
        android:textSize="14sp"
        android:id="@+id/desc_txt"
        android:maxLines="2"
        app:layout_constraintLeft_toLeftOf="@id/title_txt"
        app:layout_constraintTop_toBottomOf="@id/title_txt"
        android:textColor="@color/intro1_desc_color"
        android:fontFamily="@font/poppins_regular"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="78dp"
        android:layout_height="34dp"
        android:id="@+id/btn_id"
        app:layout_constraintTop_toTopOf="@id/exp_top_img_id"
        app:layout_constraintBottom_toBottomOf="@id/exp_top_img_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="28dp"
        android:background="@drawable/flow_unselect_item"
        android:text="@string/save"
        android:fontFamily="@font/poppins_semi_bold"
        android:textAllCaps="false"
        android:textColor="@color/flow_item_stroke"
        android:textSize="@dimen/text_16sp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>