<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/explore_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_24"
            android:layout_marginTop="@dimen/text_24"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/explore"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/topic_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/topic"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintLeft_toLeftOf="@id/explore_text_id"
            app:layout_constraintTop_toBottomOf="@id/explore_text_id" />

        <TextView
            android:id="@+id/see_all_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_24"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/see_all"
            android:textColor="@color/flow_item_stroke"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/topic_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/topic_id" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exp_topic_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/popular_text_id"
            app:layout_constraintTop_toBottomOf="@id/topic_id" />


        <TextView
            android:id="@+id/popular_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/popular_topic"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintLeft_toLeftOf="@id/topic_id"
            app:layout_constraintTop_toBottomOf="@id/exp_topic_rv" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_topic_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="470dp"
            android:layout_marginBottom="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular_text_id"
            tools:listitem="@layout/trending_news_item" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:SpinKit_Color="@color/flow_item_stroke"
            app:layout_constraintBottom_toTopOf="@id/popular_topic_rv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular_topic_rv" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>